--- a/package.json
+++ b/package.json
@@ -30,18 +30,21 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "geist": "^1.2.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "rss-parser": "^3.13.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
