--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-table": "^8.13.2",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
@@ -34,6 +35,7 @@
     "cmdk": "^1.0.0",
     "cookies-next": "^4.1.1",
     "geist": "^1.2.2",
+    "glob": "^10.3.12",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
