--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "rss-parser": "^3.13.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
