--- a/package.json
+++ b/package.json
@@ -11,13 +11,6 @@
   "dependencies": {
     "@giscus/react": "^3.1.0",
     "@icons-pack/react-simple-icons": "^13.0.0",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
@@ -28,6 +21,7 @@
     "millify": "^6.1.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
+    "radix-ui": "latest",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "5.0.0-rc.2",
